// {C} Copyright 2017 Pensando Systems Inc. All rights reserved.

syntax = "proto3";
// Service name
package rollout;

import "rollout.proto";


service RolloutV1 {
    // Prefix for all resources served by this service.
    option (venice.apiPrefix)           = "rollout";
    option (venice.apiVersion)          = "v1";
    option (venice.apiGrpcCrudService)  = "Rollout";
    option (venice.apiGrpcCrudService)  = "RolloutAction";

    // Rollout Service
    option (venice.apiRestService) = {
        Object: "Rollout"
        Method: [ "get", "list", "watch"]
    };

    // Action to start rollout.
    option (venice.apiAction) = {
     Collection: "Rollout"
     Action: "CreateRollout"
     Request: "Rollout"
     Response: "Rollout"
     Desc: "Start Rollout operation"
    };

    // Action to update rollout.
    option (venice.apiAction) = {
     Collection: "Rollout"
     Action: "UpdateRollout"
     Request: "Rollout"
     Response: "Rollout"
     Desc: "Update Rollout configuration"
    };

    // Action to stop/suspend rollout.
    option (venice.apiAction) = {
     Collection: "Rollout"
     Action: "StopRollout"
     Request: "Rollout"
     Response: "Rollout"
     Desc: "Stop a Rollout operation"
    };

    // Action to stop/suspend rollout.
    option (venice.apiAction) = {
     Collection: "Rollout"
     Action: "RemoveRollout"
     Request: "Rollout"
     Response: "Rollout"
     Desc: "Remove a Rollout"
    };
}
